# crew-matt

./: pyproject.toml
src/financial_analyst_crew/: crew.py  main.py
src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
